webtop/pvc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: webtop
