webtop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop-simon
  namespace: webtop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtop-simon
  template:
    metadata:
      labels:
        app: webtop-simon
    spec:
      containers:
      - name: webtop-simon
        image: simonstiil/webtop-debian-xfce:main-arm64@sha256:8347b801fb691a439f9164a3f53d697aefb7d2264b8191f0e4668183bf8f235b
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        - containerPort: 3001
        volumeMounts:
        - name: simon-home
          mountPath: /config
        - name: simon-data
          mountPath: /data
        - name: cache-volume
          mountPath: /dev/shm
      serviceAccountName: webtop-admin
      volumes:
        - name: simon-home
          persistentVolumeClaim:
            claimName: simon-home
        - name: simon-data
          persistentVolumeClaim:
            claimName: simon-data
        - name: cache-volume
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
