webtop/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop-simon
  namespace: webtop
spec:
  selector:
    app: webtop-simon
  ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop-simon
  namespace: webtop
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
spec:
  rules:
  - host: webtop.${clusterdomain:=undefined}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webtop-simon
            port:
              number: 3000
